# pydantic-serializer

./: README.md  pyproject.toml
pydantic_serializer/: __init__.py  deserializer.py  serializer.py
tests/: test_serialize.py
